--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -80,7 +80,7 @@
                 android:layout_marginTop="8dp"
                 android:layout_marginStart="16dp"
                 android:layout_marginEnd="16dp"
-                app:cardBackgroundColor="@color/white"
+                app:cardBackgroundColor="@color/pizza_card_bg"
                 app:cardCornerRadius="16dp"
                 app:cardElevation="6dp"
                 app:layout_constraintTop_toBottomOf="@+id/tv_card_title"
@@ -138,7 +138,7 @@
                 android:layout_marginTop="16dp"
                 android:layout_marginStart="16dp"
                 android:layout_marginEnd="16dp"
-                app:cardBackgroundColor="@color/white"
+                app:cardBackgroundColor="@color/pizza_card_bg"
                 app:cardCornerRadius="16dp"
                 app:cardElevation="6dp"
                 app:layout_constraintTop_toBottomOf="@+id/card_pizza_1"
