--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -119,7 +119,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Rp 135.000"
-                        android:textColor="@color/app_text_primary"
+                        android:textColor="@color/pizza_accent"
                         android:textSize="18sp"
                         android:textStyle="bold"
                         android:layout_centerVertical="true"
@@ -208,7 +208,7 @@
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:text="Rp 120.000"
-                                    android:textColor="@color/app_text_secondary"
+                                    android:textColor="@color/pizza_accent"
                                     android:textSize="14sp"
                                     android:layout_alignParentStart="true"
                                     android:layout_centerVertical="true"/>
@@ -262,7 +262,7 @@
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:text="Rp 115.000"
-                                    android:textColor="@color/app_text_secondary"
+                                    android:textColor="@color/pizza_accent"
                                     android:textSize="14sp"
                                     android:layout_alignParentStart="true"
                                     android:layout_centerVertical="true"/>
@@ -315,7 +315,7 @@
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:text="Rp 110.000"
-                                    android:textColor="@color/app_text_secondary"
+                                    android:textColor="@color/pizza_accent"
                                     android:textSize="14sp"
                                     android:layout_alignParentStart="true"
                                     android:layout_centerVertical="true"/>
@@ -410,7 +410,7 @@
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:text="Rp 85.000"
-                                    android:textColor="@color/app_text_primary"
+                                    android:textColor="@color/pizza_accent"
                                     android:textSize="16sp"
                                     android:textStyle="bold"
                                     android:layout_marginEnd="8dp"/>
@@ -496,7 +496,7 @@
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:text="Rp 95.000"
-                                    android:textColor="@color/app_text_primary"
+                                    android:textColor="@color/pizza_accent"
                                     android:textSize="16sp"
                                     android:textStyle="bold"
                                     android:layout_marginEnd="8dp"/>
@@ -582,7 +582,7 @@
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:text="Rp 98.000"
-                                    android:textColor="@color/app_text_primary"
+                                    android:textColor="@color/pizza_accent"
                                     android:textSize="16sp"
                                     android:textStyle="bold"
                                     android:layout_marginEnd="8dp"/>
@@ -668,7 +668,7 @@
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:text="Rp 105.000"
-                                    android:textColor="@color/app_text_primary"
+                                    android:textColor="@color/pizza_accent"
                                     android:textSize="16sp"
                                     android:textStyle="bold"
                                     android:layout_marginEnd="8dp"/>
@@ -751,7 +751,7 @@
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:text="Rp 88.000"
-                                    android:textColor="@color/app_text_primary"
+                                    android:textColor="@color/pizza_accent"
                                     android:textSize="16sp"
                                     android:textStyle="bold"
                                     android:layout_marginEnd="8dp"/>
@@ -833,7 +833,7 @@
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:text="Rp 92.000"
-                                    android:textColor="@color/app_text_primary"
+                                    android:textColor="@color/pizza_accent"
                                     android:textSize="16sp"
                                     android:textStyle="bold"
                                     android:layout_marginEnd="8dp"/>
@@ -915,7 +915,7 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:text="Rp 90.000"
-                                android:textColor="@color/app_text_primary"
+                                android:textColor="@color/pizza_accent"
                                 android:textSize="16sp"
                                 android:textStyle="bold"
                                 android:layout_marginEnd="8dp"/>
